--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "main": "src/index.go",
+    "main": "index.go",
     "repository": {
 		"type": "git",
-		"url": "https://github.com/qiongtubao/latte_go_verify.git"
+		"url": "https://github.com/qiongtubao/latte_go_readFile.git"
 	},
     "devDependencies": {
         "latte_go_lib": "github.com/qiongtubao/latte_go_lib"
